# ENSTAB_BOT

./: .gitignore  README.md  build.sh  data.pth  pyproject.toml  requirements.txt
ENSTA_BOT1/: README.md  app.py  chat.py  data.pth  intents.json  model.py  nltk_utils.py  train.py
ENSTA_BOT1/static/: app.js  style.css  stylesd.css
ENSTA_BOT1/templates/: base.html  dash.html
logpfa2/: package-lock.json  package.json  server.js
logpfa2/public/: index.html  insc.html  login.js  styles.css  styles1.css
