[tool.poetry]
name = "enstabot"
version = "0.1.0"
description = "ENSTA Bot"
authors = ["wajih1234 <cherniwajih4@gmail.com>"]
packages = [
    {include = "ENSTA_BOT1"},
    
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
torch = "^2.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"